--- a/scr/index.html
+++ b/scr/index.html
@@ -34,8 +34,8 @@
     </div>
     <div class="center">
       <div class="search">
-        <label class="movil" for=""></label>
-        <input id="search" placeholder="buscar" type="text">
+        <label for=""></label>
+        <input id="search" placeholder="buscar" type="text" width="100%">
         <div id="iconsearch">
           <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape"><div style="width: 100%; height: 100%; display: block; fill: currentcolor;"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"><path clip-rule="evenodd" d="M16.296 16.996a8 8 0 11.707-.708l3.909 3.91-.707.707-3.909-3.909zM18 11a7 7 0 00-14 0 7 7 0 1014 0z" fill-rule="evenodd"></path></svg></div></span>
         </div>
@@ -43,7 +43,7 @@
       <div>
         <button id="micro">
           <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape">
-            <div style="width: 100%; height: 100%; display: block; fill: currentcolor;">
+            <div style="display: block; fill: currentcolor;">
               <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
                 <path d="M12 3c-1.66 0-3 1.37-3 3.07v5.86c0 1.7 1.34 3.07 3 3.07s3-1.37 3-3.07V6.07C15 4.37 13.66 3 12 3zm6.5 9h-1c0 3.03-2.47 5.5-5.5 5.5S6.5 15.03 6.5 12h-1c0 3.24 2.39 5.93 5.5 6.41V21h2v-2.59c3.11-.48 5.5-3.17 5.5-6.41z"></path>
               </svg>
@@ -57,7 +57,7 @@
         <div>
           <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape">
             <div style="width: 100%; height: 100%; display: block; fill: currentcolor;">
-              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit;">
                 <path d="M20 12h-8v8h-1v-8H3v-1h8V3h1v8h8v1z"></path>
               </svg>
             </div>
@@ -70,33 +70,33 @@
       <button id="notification">
         <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape">
           <div style="width: 100%; height: 100%; display: block; fill: currentcolor;">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit;">
               <path clip-rule="evenodd" d="m13.497 4.898.053.8.694.4C15.596 6.878 16.5 8.334 16.5 10v2.892c0 .997.27 1.975.784 2.83L18.35 17.5H5.649l1.067-1.778c.513-.855.784-1.833.784-2.83V10c0-1.666.904-3.122 2.256-3.902l.694-.4.053-.8c.052-.78.703-1.398 1.497-1.398.794 0 1.445.618 1.497 1.398ZM6 10c0-2.224 1.21-4.165 3.007-5.201C9.11 3.236 10.41 2 12 2c1.59 0 2.89 1.236 2.993 2.799C16.79 5.835 18 7.776 18 10v2.892c0 .725.197 1.436.57 2.058l1.521 2.535c.4.667-.08 1.515-.857 1.515H15c0 .796-.316 1.559-.879 2.121-.562.563-1.325.879-2.121.879s-1.559-.316-2.121-.879C9.316 20.56 9 19.796 9 19H4.766c-.777 0-1.257-.848-.857-1.515L5.43 14.95c.373-.622.57-1.333.57-2.058V10Zm4.5 9c0 .398.158.78.44 1.06.28.282.662.44 1.06.44s.78-.158 1.06-.44c.282-.28.44-.662.44-1.06h-3Z" fill-rule="evenodd"></path>
             </svg>
           </div>
         </span>
       </button>
       <div id="perrito">
-        <img class="icon" width="32px" src="./perrito.jpeg" alt="perrito fachero">
-      </div>
+        <img class="icon" width="32px" src="./perrito.jpeg" alt="perrito fachero" style="border-radius: 100%;">
+      </div> 
     </div>
   </nav>
   <main>
     <header>
-      <div id="barra">
-        <button> Todos </button>
-        <button> Video juegos</button>
-        <button> Podcasts</button>
-        <button> Jefe </button>
-        <button> Mixes </button>
-        <button> En tiempo real</button>
-        <button> Subido recientemente</button>
-        <button>Manga </button>
-        <button> Audio comentado</button>
-        <button> Musica</button>
+      <div class="bar-div">
+        <button class="bar">Todos</button>
+        <button class="bar">Videojuegos</button>
+        <button class="bar">Podcasts</button>
+        <button class="bar">Jefe</button>
+        <button class="bar">Mixes</button>
+        <button class="bar">Reacción</button>
+        <button class="bar">Novedades</button>
+        <button class="bar">Manga</button>
+        <button class="bar">Perrito</button>
+        <button class="bar">Musica</button>
       </div>
     </header>
-    <div class="sidebar">
+    <div class="sidebar ">
       <button id="Principal">
         <div>
           <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape">
@@ -154,9 +154,6 @@
         </div>
       </button>
     </div>
-    <section class="botones">
-      
-    </section>
     <section>
       <div>
         <img alt="" class="yt-core-image yt-core-image--fill-parent-height yt-core-image--fill-parent-width yt-core-image--content-mode-scale-aspect-fill yt-core-image--loaded" style="background-color: transparent;" src="https://i.ytimg.com/vi/wjZCCcu2CUQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLAfH8kt1xiy6gSIEA62MxfI5Iu_EQ">
