--- a/scr/index.html
+++ b/scr/index.html
@@ -9,6 +9,11 @@
 <body>
   <nav>
     <div class="izquierda">
+      <button id="trebar">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+          <path d="M21 6H3V5h18v1zm0 5H3v1h18v-1zm0 6H3v1h18v-1z"></path>
+        </svg>
+      </button>
       <section id="iconyou">
         <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape">
           <div style="width: 100%; height: 100%; display: block; fill: currentcolor;">
@@ -96,7 +101,7 @@
         <button class="bar">Musica</button>
       </div>
     </header>
-    <div class="sidebar ">
+    <div class="sidebar">
       <button id="Principal">
         <div>
           <span class="yt-icon-shape style-scope yt-icon yt-spec-icon-shape">
@@ -154,7 +159,7 @@
         </div>
       </button>
     </div>
-    <section>
+    <section class="videos">
       <div>
         <img alt="" class="yt-core-image yt-core-image--fill-parent-height yt-core-image--fill-parent-width yt-core-image--content-mode-scale-aspect-fill yt-core-image--loaded" style="background-color: transparent;" src="https://i.ytimg.com/vi/wjZCCcu2CUQ/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&amp;rs=AOn4CLAfH8kt1xiy6gSIEA62MxfI5Iu_EQ">
         <div>
@@ -172,6 +177,13 @@
             </button>
           </div>
         </div>
+      </div>
+      <div>
+        <div>
+
+        </div>
+        <div></div>
+        <div></div>
       </div>
     </section>
   </main>
